# quadruped

./: README.md
src/spot_control/: CMakeLists.txt  package.xml
src/spot_control/launch/: description.launch.py
src/spot_control/urdf/: robot.xacro  robot.xacro.urdf
src/spot_control/urdf/parts/base/: base.xacro
src/spot_control/urdf/parts/left_thigh/: left_thigh.xacro
src/spot_control/urdf/parts/leg_joint/: leg_joint.xacro
src/spot_control/urdf/parts/right_thigh/: right_thigh.xacro
src/spot_control/urdf/parts/shin/: shin.xacro
src/spotrobot_control/: CMakeLists.txt  package.xml
src/spotrobot_control/launch/: robot_control.launch.py
src/spotrobot_control/scripts/: robot_controller_gazebo.py  test_joy.py
src/spotrobot_control/scripts/RobotController/: RobotController.py
